backend/src/api/api.hpp

    
    typedef struct LeHandle LeHandle;
    void le_zoom(LeHandle *handle, double factor, int32_t x, int32_t y);
    void le_fit_scene(LeHandle *handle, int32_t padding_px);
    void le_set_mouse_position(LeHandle *handle, int32_t x, int32_t y);
    enum LeKeyCode
    {
        LE_KEY_SHIFT = 1,
        LE_KEY_ZOOM = 2,
        LE_KEY_FIT = 3,
        LE_KEY_PAN_LEFT = 4,
        LE_KEY_PAN_RIGHT = 5,
        LE_KEY_PAN_UP = 6,
        LE_KEY_PAN_DOWN = 7,
        LE_KEY_CTRL = 8,
        LE_KEY_SELECT_ALL = 9,
        LE_KEY_1 = 10,
        LE_KEY_2 = 11,
        LE_KEY_3 = 12,
        LE_KEY_4 = 13,
        LE_KEY_5 = 14,
        LE_KEY_6 = 15,
        LE_KEY_7 = 16,
        LE_KEY_8 = 17,
        LE_KEY_9 = 18,
        LE_KEY_DESELECT_ALL = 19,
        LE_KEY_0 = 20,
        LE_KEY_SELECT_MODE = 21,
        LE_KEY_EDIT_MODE = 22,
    };
    void le_key_down(LeHandle *handle, int32_t key_code);
    void le_mouse_down(LeHandle *handle, int32_t x, int32_t y);
    void le_zoom_drag_down(LeHandle *handle, int32_t x, int32_t y);
    void le_mouse_up(LeHandle *handle, int32_t x, int32_t y);
    const char *le_tooltip_message(LeHandle *handle);
    int32_t le_selection_count(LeHandle *handle);
    int64_t le_selection_version(LeHandle *handle);
    typedef enum LeSelectionKind
    {
        LE_SELECTION_KIND_TERMINAL = 0,
        LE_SELECTION_KIND_OBSTRUCTION = 1,
    } LeSelectionKind;
    int32_t le_selected_object_kind(LeHandle *handle, int32_t selection_index);
    typedef struct LeProperty
    {
        const char *name;
        int32_t type; 
        const char *string_value;
        int64_t int_value;
        double double_value;
    } LeProperty;
    int32_t le_selected_object_property_count(LeHandle *handle, int32_t selection_index);
    LeProperty le_selected_object_property_at(LeHandle *handle, int32_t selection_index, int32_t property_index);