flutter_plugin/lib/lef_editor_plugin_bindings_generated.dart


  /// @brief Begin a mouse gesture at the given pixel position (top-left
  /// origin, y down - same convention as le_set_mouse_position/le_zoom),
  /// e.g. on a pointer-down event. Records the gesture's anchor point;
  /// le_mouse_up() later decides whether the gesture was a click or a
  /// rubber-band drag-select by comparing the down/up pixel distance
  /// against a small threshold (UPDATES.md 7.1 items 2-6). A no-op if
  /// handle is null.
  void le_mouse_down(ffi.Pointer<LeHandle> handle, int x, int y) {
    return _le_mouse_down(handle, x, y);
  }

  late final _le_mouse_downPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<LeHandle>, ffi.Int32, ffi.Int32)
        >
      >('le_mouse_down');
  late final _le_mouse_down = _le_mouse_downPtr
      .asFunction<void Function(ffi.Pointer<LeHandle>, int, int)>();

  /// @brief Like le_mouse_down(), but begins a rectangle-*zoom* gesture
  /// instead of a drag-*select* one (UPDATES.md 9.3 - e.g. on a
  /// right-button pointer-down event) - le_mouse_up() is still the one
  /// call that ends either kind, deciding which behavior to run from
  /// which of le_mouse_down()/le_zoom_drag_down() started it (see its
  /// own doc comment). A no-op if handle is null.
  void le_zoom_drag_down(ffi.Pointer<LeHandle> handle, int x, int y) {
    return _le_zoom_drag_down(handle, x, y);
  }

  late final _le_zoom_drag_downPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<LeHandle>, ffi.Int32, ffi.Int32)
        >
      >('le_zoom_drag_down');
  late final _le_zoom_drag_down = _le_zoom_drag_downPtr
      .asFunction<void Function(ffi.Pointer<LeHandle>, int, int)>();

  /// @brief End a mouse gesture at the given pixel position, e.g. on a
  /// pointer-up event - the single shared endpoint for both
  /// le_mouse_down()'s drag-select gesture and
  /// le_zoom_drag_down()'s drag-zoom gesture (UPDATES.md 9.3); which
  /// one runs depends entirely on which of those two started the
  /// in-progress gesture, not on which mouse button this call itself
  /// corresponds to (a real up-event's own "which button" state isn't
  /// reliably available at release time on every platform, so the
  /// frontend doesn't need to track or pass it here - only the down
  /// side needs to pick correctly). A no-op if handle is null or there
  /// was no matching le_mouse_down()/le_zoom_drag_down() call first (a
  /// stray/duplicate mouse-up).
  ///
  /// **Started by le_mouse_down()** - two outcomes, both subject to
  /// Pipeline::hit_test_point/hit_test_rect's own topmost-layer-first
  /// (click) / all-layers (drag) and layer-selectability rules, and
  /// both consulting LE_KEY_SHIFT's current held state (see
  /// le_key_down) rather than taking it as a parameter here:
  ///
  /// - **Click** (down/up pixel distance below a small threshold): hit-
  /// tests the single point. Without shift held, replaces the
  /// current selection with the hit shape, or clears it if nothing
  /// was hit; with shift held, adds the hit to the current selection
  /// (a no-op if nothing was hit).
  /// - **Drag-select** (distance above the threshold): hit-tests every
  /// selectable shape, on every layer, fully enclosed by the
  /// rectangle between the down and up points. Without shift held,
  /// replaces the current selection with the results; with shift
  /// held, adds them to it.
  ///
  /// **Started by le_zoom_drag_down()** (UPDATES.md 9.3): a click-sized
  /// release (same threshold as above) is a no-op - fitting to a
  /// near-zero-size rectangle would produce an absurd scale; otherwise
  /// fits the viewport to the rectangle between the down and up points
  /// (Scene::fit_to_content, no padding), the same fitting math
  /// le_fit_scene() uses for a Design's own content bbox. Selection is
  /// untouched either way - this gesture is purely navigational.
  ///
  /// Either way, ends the in-progress drag gesture (Scene::end_drag) -
  /// see le_mouse_down's own doc comment for the live rubber-band
  /// rectangle this also stops showing.
  void le_mouse_up(ffi.Pointer<LeHandle> handle, int x, int y) {
    return _le_mouse_up(handle, x, y);
  }

  late final _le_mouse_upPtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Void Function(ffi.Pointer<LeHandle>, ffi.Int32, ffi.Int32)
        >
      >('le_mouse_up');
  late final _le_mouse_up = _le_mouse_upPtr
      .asFunction<void Function(ffi.Pointer<LeHandle>, int, int)>();

  /// @brief Instructional text describing which mouse gestures and
  /// keyboard modifiers are currently available, for display in the
  /// GUI's status bar below the texture (UPDATES.md item 7.3) - e.g.
  /// "Left click to select. Shift for multi-select. Left click and
  /// drag for rectangle multi-select." for the current (and, for now,
  /// only) interaction mode, Select - see UPDATES.md item 7's own
  /// intro for the other modes this will eventually distinguish
  /// between. Unlike every other `const char*`-returning function in
  /// this header, the returned pointer refers to static, process-
  /// lifetime storage - not owned by `handle`, never invalidated, safe
  /// to hold indefinitely. Null only if `handle` is null.
  ffi.Pointer<ffi.Char> le_tooltip_message(ffi.Pointer<LeHandle> handle) {
    return _le_tooltip_message(handle);
  }

  late final _le_tooltip_messagePtr =
      _lookup<
        ffi.NativeFunction<
          ffi.Pointer<ffi.Char> Function(ffi.Pointer<LeHandle>)
        >
      >('le_tooltip_message');
  late final _le_tooltip_message = _le_tooltip_messagePtr
      .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<LeHandle>)>();

  /// @brief Number of currently selected objects (Scene::selection()).
  /// Indexes the `selection_index` parameter of le_selected_object_kind()/
  /// le_selected_object_property_count()/le_selected_object_property_at()
  /// below - 0..le_selection_count()-1, in Scene::selection()'s own
  /// (insertion) order. Returns 0 if handle is null.
  int le_selection_count(ffi.Pointer<LeHandle> handle) {
    return _le_selection_count(handle);
  }

  late final _le_selection_countPtr =
      _lookup<ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<LeHandle>)>>(
        'le_selection_count',
      );
  late final _le_selection_count = _le_selection_countPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>)>();

  /// @brief Monotonic counter (Scene::selection_version()) bumped on
  /// every actual selection change (a select()/deselect()/
  /// clear_selection() call that isn't a no-op) - a cheap way for a
  /// caller to tell whether anything selection-related has changed
  /// since it last checked, without re-fetching le_selection_count()/
  /// le_selected_object_kind()/le_selected_object_properties() for
  /// every selected object on every call (e.g. every mouse-move event -
  /// a real, measured cost that scales with selection size otherwise,
  /// see BENCHMARKS.md). Returns 0 if handle is null - a real handle's
  /// version is never observably 0 forever (any interaction eventually
  /// changes it), so a caller comparing against a sentinel it
  /// initialized to a negative value on its own side won't be confused
  /// by a null-handle 0 looking like "unchanged".
  int le_selection_version(ffi.Pointer<LeHandle> handle) {
    return _le_selection_version(handle);
  }

  late final _le_selection_versionPtr =
      _lookup<ffi.NativeFunction<ffi.Int64 Function(ffi.Pointer<LeHandle>)>>(
        'le_selection_version',
      );
  late final _le_selection_version = _le_selection_versionPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>)>();

  int le_selected_object_kind(
    ffi.Pointer<LeHandle> handle,
    int selection_index,
  ) {
    return _le_selected_object_kind(handle, selection_index);
  }

  late final _le_selected_object_kindPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<LeHandle>, ffi.Int32)>
      >('le_selected_object_kind');
  late final _le_selected_object_kind = _le_selected_object_kindPtr
      .asFunction<int Function(ffi.Pointer<LeHandle>, int)>();

  /// @brief Number of property rows the selected object at
  /// `selection_index` has (see LeProperty) - indexes
  /// le_selected_object_property_at()'s own `property_index` parameter,
  /// 0..this-1. Varies by LeSelectionKind and by whether the object has
  /// any shapes yet (an empty Terminal/Obstruction has no bounding box
  /// to report - see le_selected_object_property_at). Returns 0 if
  /// handle is null or selection_index is out of range.
  int le_selected_object_property_count(
    ffi.Pointer<LeHandle> handle,
    int selection_index,
  ) {
    return _le_selected_object_property_count(handle, selection_index);
  }

  late final _le_selected_object_property_countPtr =
      _lookup<
        ffi.NativeFunction<ffi.Int32 Function(ffi.Pointer<LeHandle>, ffi.Int32)>
      >('le_selected_object_property_count');
  late final _le_selected_object_property_count =
      _le_selected_object_property_countPtr
          .asFunction<int Function(ffi.Pointer<LeHandle>, int)>();
